typo review Tier5

--- a/tier5.html
+++ b/tier5.html
@@ -172,7 +172,7 @@
 
     </div>
 
-      <div><p class="statement statmentOrange">Focus on competing only with lead generators.</p></div>
+      <div><p class="statement statmentOrange">Focus on competing only with lead generators</p></div>
 <div class="tableGrandparent">
 
 <div class="table-responsive tableParent center-table">
@@ -199,7 +199,7 @@
         <td class="leftSideTitles">Strengths</td>
         <td class="compTableText heavyText weakColor ">
           <ul>
-            <li>Fresh on-demand lead generation</li>
+            <li>Fresh, on-demand lead generation</li>
             <li>Correct contact details</li>
           </ul>
         </td>
@@ -210,11 +210,11 @@
             <li>Alerts</li>
           </ul>
         </td>
-        <td class="compTableText heavyText weakColor "><ul><li>Offers info on targets use of competitive technologies</li></ul></td>
-        <td class="compTableText heavyText weakColor "><ul><li>Includes Hoover's/Dun &amp BradStreet data</li></ul></td>
+        <td class="compTableText heavyText weakColor "><ul><li>Offers info on target's use of competitive technologies</li></ul></td>
+        <td class="compTableText heavyText weakColor "><ul><li>Includes Hoover's/Dun &amp Bradstreet data</li></ul></td>
         <td class="compTableText heavyText weakColor ">
           <ul>
-            <li>View co-workers connections</li>
+            <li>View co-workers' connections</li>
             <li>Claims most accurate contact information</li>
           </ul>
         </td>
@@ -226,7 +226,7 @@
         <td class="compTableText heavyText weakLine weakColor">
           <ul>
             <li>Bare UI</li>
-            <li>No Ability to search individual contacts</li>
+            <li>No ability to search individual contacts</li>
             <li>No nurturing capabilities</li>
           </ul>
         </td>
@@ -238,7 +238,7 @@
         </td>
         <td class="compTableText heavyText weakLine weakColor">
           <ul>
-            <li>Contact info given only one at a time, manual process</li>
+            <li>Contact info given only one at a time; manual process</li>
             <li>Charged credits even on invalid emails</li>
           </ul>
         </td>
@@ -250,7 +250,7 @@
         </td>
         <td class="compTableText heavyText weakLine weakColor">
           <ul>
-            <li>Cheaper plans require 5 license minimum</li>
+            <li>Cheaper plans require 5-license minimum</li>
             <li>No individual newsfeed</li>
           </ul>
         </td>
