--- a/webmd.html
+++ b/webmd.html
@@ -1136,8 +1136,8 @@
   <!-- col-sm-5 -->
   <div class="col-xs-12 col-sm-8 col-md-offset-1 col-md-6 col-lg-offset-1 col-lg-5">
     <!-- col-sm-offset-1 col-sm-6  -->
-    <a href="webmd.html">
-      <p class="nextPort nextPortTier arrowAndText">WebMD Mobile App with Companion Wearable</p>
+    <a href="beauty.html">
+      <p class="nextPort nextPortTier arrowAndText">BeautyCures Native App</p>
       <img class="arrowPort arrowAndText" alt="Connect Icon" src="myimages/arrow-port.png">
     </a>
   </div>
