Changed "up next to be more user friendly

--- a/webmd.html
+++ b/webmd.html
@@ -1130,14 +1130,23 @@
 </div>
 
 
-<!-- NEXT PORTFOLIO SECTION -->
-<div class="processSectionTitle processSectionTitleUpNextTier processSectionTitleUpNext">
+<!-- NEXT PORTFOLIO SECTION: ORIGINAL -->
+<!-- <div class="processSectionTitle processSectionTitleUpNextTier processSectionTitleUpNext">
   <div class="col-xs-12 col-sm-4 col-md-5 col-lg-6 ">Up Next</div>
-  <!-- col-sm-5 -->
   <div class="col-xs-12 col-sm-8 col-md-offset-1 col-md-6 col-lg-offset-1 col-lg-5">
-    <!-- col-sm-offset-1 col-sm-6  -->
     <a href="beauty.html">
       <p class="nextPort nextPortTier arrowAndText">BeautyCures Native App</p>
+      <img class="arrowPort arrowAndText" alt="Connect Icon" src="myimages/arrow-port.png">
+    </a>
+  </div>
+</div> -->
+
+<!-- NEXT PRODUCT SECTION REDESIGN -->
+<div class="processSectionTitle processSectionTitleUpNextTier processSectionTitleUpNext">
+  <div class="upNext">Up Next:</div>
+  <div class="upNext">
+    <a href="beauty.html">
+      <p class="nextPortWeb arrowAndText">BeautyCures Native App</p>
       <img class="arrowPort arrowAndText" alt="Connect Icon" src="myimages/arrow-port.png">
     </a>
   </div>
