--- a/tier5.html
+++ b/tier5.html
@@ -942,7 +942,7 @@
   <div class="decSections">
     <div class="decCircle"><p>1</p></div>
     <div class="decText">
-      <div class="decPoints"><p>Give the salesperson more control over his or her lead list.</</p></div>
+      <div class="decPoints"><p>Give the salesperson more control over the lead list.</</p></div>
 
       <div class="approachSubPoints heavyText"><p>Allow salespeople to accept, reject, sort, and re-filter their lists until they are satisfied that they have gotten what they need as well as their money&#39;s worth.</p></div>
 
@@ -978,7 +978,7 @@
   <div class="decSections">
       <div class="decCircle decCircle3"><p class="decNumber decNumber3">3</p></div>
       <div class="decText">
-      <div class="decPoints"><p>The ever-moving NAV.</div>
+      <div class="decPoints"><p>Continue moving the NAV until one sticks.</div>
         <div class="approachSubPoints heavyText"><p>We tested 5+ different versions of the NAV and the list components, but finally found a combination that most people found to be clear and easy to use.</p></div>
       </div>
   </div>
