adding new resume section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <!-- <a class="navbar-brand" href="#">Responsive navbar</a> -->
               <ul id="navUl" class="nav-inline nav navbar-nav">
                 <!-- <div class="row"> -->
-                <li class="homeBarli nav-item" id= "resumeHome"><a href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13">Resume</a></li>
+                <li class="homeBarli nav-item" id= "resumeHome"><a href="resume.html">Resume</a></li>
 
                 <li class="homeBarli nav-item" id= "aboutHome"><a href="about.html">About</a></li>
                 <!-- </div> -->
