--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul id="navUl" class="nav-inline nav navbar-nav">
                   <li class="homeBarli nav-item" id= "homeHome"><a href="index.html">Portfolio</a></li>
-                  <li class="homeBarli nav-item" id= "resumeHome"><a href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13">Resume</a></li>
+                  <li class="homeBarli nav-item" id= "resumeHome"><a href="resume.html">Resume</a></li>
                   <li class="homeBarli nav-item" id= "aboutHome"><a href="about.html">About</a></li>
                 </ul>
               </div>
