--- a/webmd.html
+++ b/webmd.html
@@ -41,7 +41,7 @@
                 <ul id="navUl" class="nav-inline nav navbar-nav">
                   <!-- <div class="row"> -->
                   <li class="homeBarli nav-item" id= "homeHome"><a href="index.html">Portfolio</a></li>
-                  <li class="homeBarli nav-item" id= "resumeHome"><a href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13">Resume</a></li>
+                  <li class="homeBarli nav-item" id= "resumeHome"><a href="resume.html">Resume</a></li>
                   <li class="homeBarli nav-item" id= "aboutHome"><a href="about.html">About</a></li>
                   <!-- </div> -->
                 </ul>
