--- a/tier5.html
+++ b/tier5.html
@@ -761,7 +761,7 @@
           </div>
           <div class="iconSentence">
             <img class="featureIcon" alt="Connect Icon" src="myimages/tier5/design/connect-icon.png">
-            <p class="experienceSentence2">Connectivity vie to assess relationships</p>
+            <p class="experienceSentence2">Connectivity view to assess relationships</p>
           </div>
   </div>
         <!-- features -->
