--- a/webmd.html
+++ b/webmd.html
@@ -76,7 +76,7 @@
 
           <div class="introBox col-xs-6 col-md-offset-1">
             <p class="boxTitle webmdGreen">My Role</p>
-            <p class="boxText heavyText"> As part of a class project, our team of three worked collaboratively through the design process for two weeks to design the concept and prepare basic wireframes. My most prominent roles were in ideation, concept creation, wearable prototyping, interviews, user testing, and presentation creation and delivery.
+            <p class="boxText heavyText"> As part of a class project, our team of three worked collaboratively through the design process for one week to design the concept and prepare basic wireframes. My most prominent roles were in ideation, concept creation, wearable prototyping, interviews, user testing, and presentation creation and delivery.
           </p>
       </div>
         </div>
